RGP: Fix "is this study right for me?" paragraph text

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/lgmd/lgmd.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/lgmd/lgmd.component.html
@@ -29,7 +29,7 @@
   <div class="row Landing-article Background--lightBlue">
     <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
       <h2 class="Landing-title" translate>LGMDPage.Right.Title</h2>
-      <p class="Landing-text Aligned--left" translate>LGMDPage.Right.Title</p>
+      <p class="Landing-text Aligned--left" translate>LGMDPage.Right.Text</p>
       <ul class="Landing-list Color--white">
         <ng-container *ngFor="let item of 'LGMDPage.Right.Items' | translate">
           <li>{{item}}</li>
