--- a/ddp-workspace/projects/ddp-rgp/src/app/components/tell-us-your-story/tell-us-your-story.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/tell-us-your-story/tell-us-your-story.component.html
@@ -1,20 +1,34 @@
-<div class="PageHeader">
-  <div class="PageHeader-background Background--orange">
-    <div class="row PageLayout">
-      <div class="col-lg-9 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-        <h1 class="PageHeader-title" translate>CountMeInPage.Title</h1>
+<div class="tell-us-your-story">
+  <div class="PageHeader">
+    <div class="PageHeader-background Background--orange">
+      <div class="row PageLayout">
+        <div
+          class="col-lg-9 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12"
+        >
+          <h1 class="PageHeader-title" translate>CountMeInPage.Title</h1>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<div class="Wrapper row">
-  <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 Container Container--howItWorks">
-    <img src="/assets/images/tell-us-your-story.jpg" class="PageContent-image"
-      [alt]="'CountMeInPage.Title' | translate">
-    <h2 class="Title Color--blue Aligned--center TopMargin50" translate>CountMeInPage.SectionTitle</h2>
+  <div class="Wrapper row">
+    <div
+      class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 Container Container--howItWorks"
+    >
+      <img
+        src="/assets/images/tell-us-your-story.jpg"
+        class="PageContent-image"
+        [alt]="'CountMeInPage.Title' | translate"
+      />
+      <h2 class="Title Color--blue Aligned--center TopMargin50" translate>
+        CountMeInPage.SectionTitle
+      </h2>
 
-    <p class="Paragraph TopMargin25" [innerHTML]="'CountMeInPage.Text' | translate"></p>
+      <p
+        class="Paragraph TopMargin25"
+        [innerHTML]="'CountMeInPage.Text' | translate"
+      ></p>
 
-    <toolkit-workflow-start-activity-redesigned></toolkit-workflow-start-activity-redesigned>
+      <toolkit-workflow-start-activity-redesigned></toolkit-workflow-start-activity-redesigned>
+    </div>
   </div>
 </div>
