--- a/ddp-workspace/projects/ddp-rgp/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles/_variables.scss
@@ -2,4 +2,6 @@ $color-teal: #0ea7b5;
 $color-blue-dark: #0c457d;
 $color-blue-light: #337ab7;
 $color-orange: #e8702a;
+$color-orange-light: #f9dbca;
 $color-grey-light: #f1f1f1;
+$color-grey-light-2: #efefef;
