Fix guid as to receive a correct instance

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/modalActivityBlock/modalActivityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/modalActivityBlock/modalActivityBlock.component.html
@@ -49,7 +49,7 @@
     <ddp-activity-section [section]="activityForm?.sections[0]"
                           [readonly]="readonly"
                           [studyGuid]="studyGuid"
-                          [activityGuid]="activityGuid"
+                          [activityGuid]="instance.instanceGuid"
                           [validationRequested]="validationRequested"
     ></ddp-activity-section>
 
