--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/modalActivityBlock/modalActivityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/modalActivityBlock/modalActivityBlock.component.html
@@ -12,7 +12,6 @@
       <div *ngIf="instance.statusCode !== 'CREATED'"
            class="modal-activity-block__success-message">
         <mat-icon inline>check_circle</mat-icon>
-        <span>{{instance.numQuestionsAnswered}} questions answered</span>
         <span [innerHTML]="'SDK.ModalActivityBlock.NumQuestionsAnswered'
           | translate: { number: instance.numQuestionsAnswered }"></span>
       </div>
@@ -24,7 +23,7 @@
               class="button_primary"
               (click)="openEditDialog()">
         <img src="assets/shared/pencil.svg"
-             [alt]="'SDK.EditButton' | translate">
+             [alt]="'SDK.ModalActivityBlock.EditButton' | translate">
       </button>
       <button mat-mini-fab
               *ngIf="instance.canDelete"
@@ -32,7 +31,7 @@
               class="button_secondary"
               (click)="openDeleteDialog()">
         <img src="assets/shared/trash.svg"
-             [alt]="'SDK.DeleteButton' | translate">
+             [alt]="'SDK.ModalActivityBlock.DeleteButton' | translate">
       </button>
     </mat-card-actions>
   </mat-card-content>
@@ -56,7 +55,7 @@
     <button mat-flat-button
             class="button_primary modal-activity-block__save_activity"
             (click)="closeEditDialog()"
-            [innerHTML]="'SDK.SaveButton' | translate">
+            [innerHTML]="'SDK.ModalActivityBlock.SaveButton' | translate">
     </button>
   </mat-dialog-content>
 </ng-template>
@@ -70,11 +69,11 @@
       <button mat-flat-button
               color="warn"
               (click)="deleteActivityInstance()"
-              [innerHTML]="'SDK.DeleteButton' | translate">
+              [innerHTML]="'SDK.ModalActivityBlock.DeleteButton' | translate">
       </button>
       <button mat-stroked-button
               mat-dialog-close
-              [innerHTML]="'SDK.CancelButton' | translate">
+              [innerHTML]="'SDK.ModalActivityBlock.CancelButton' | translate">
       </button>
     </div>
   </div>
