--- a/ddp-workspace/projects/ddp-rgp/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles/_buttons.scss
@@ -36,3 +36,13 @@
     color: #ffffff;
   }
 }
+
+.button_new-item {
+  margin-top: 25px;
+  padding: 12px 24px !important;
+
+  background-color: #ccc;
+  box-shadow: none;
+
+  color: #333;
+}
