--- a/ddp-workspace/projects/ddp-rgp/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles/_activity.scss
@@ -3,6 +3,19 @@
 /**
  * General Activity Styles
  */
+.section--closing {
+  margin-top: 25px;
+  margin-bottom: 125px;
+
+  .BlueBox {
+    border: none;
+
+    a {
+      color: $color-orange;
+    }
+  }
+}
+
 .section-spinner {
   &__header {
     padding-top: 150px;
@@ -147,11 +160,96 @@
   }
 }
 
+.BlueHeading {
+  .Accent {
+    font-weight: 600 !important;
+  }
+
+  .Italic {
+    font-weight: 400 !important;
+    font-style: normal;
+  }
+}
+
+.ddp-activity-question {
+  margin-top: 10px;
+  padding: 0;
+}
+
+.ddp-question-prompt {
+  margin-bottom: 10px;
+  padding-top: 30px;
+
+  font-size: 1.1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+
+  .Italic {
+    font-size: 1rem;
+  }
+}
+
+.ddp-helper {
+  margin: -16px 0 0 0;
+
+  font-size: 0.9rem;
+  opacity: 0.9;
+}
+
+.mat-select-trigger {
+  margin-bottom: 10px;
+  padding: 0.4375em 0;
+
+  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+}
+
+.mat-select-disabled {
+  .mat-select-trigger {
+    border-bottom-style: dotted;
+  }
+}
+
+ddp-activity-dropdown-picklist-question select {
+  margin-bottom: 10px;
+  padding: 0.4375em 0;
+
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+
+  &:disabled {
+    border-bottom-style: dotted;
+  }
+}
+
+.ddp-radio-group-column {
+  & > div {
+    margin: 0 !important;
+
+    &:not(:last-child) {
+      margin-bottom: 10px !important;
+    }
+
+    &:last-child * {
+      margin-bottom: 0 !important;
+    }
+  }
+
+  .mat-radio-label-content {
+    color: #333333;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+}
+
 .ddp-picklist-option-list-item {
   height: unset !important;
   min-height: unset !important;
 
   .mat-list-item-content {
+    display: flex;
+    flex-flow: column nowrap !important;
+    align-items: stretch !important;
+
     padding-left: 0 !important;
 
     .mat-checkbox {
@@ -179,14 +277,52 @@
         }
       }
     }
+
+    .mat-checkbox-disabled {
+      .mat-checkbox-layout {
+        .mat-checkbox-label {
+          color: rgba(0, 0, 0, 0.54);
+        }
+      }
+    }
+
+    .mat-form-field {
+      margin-top: 5px;
+    }
+
+    .ddp-helper {
+      margin-bottom: 15px;
+    }
   }
 }
 
-.ddp-question-prompt {
-  margin-bottom: 10px;
+.survey-buttons {
+  display: flex;
+  justify-content: space-between;
 
-  font-size: 1rem;
-  line-height: 1.5rem;
+  margin-top: 25px;
+  padding-top: 25px;
+
+  border-top: 1px solid $color-grey-light-3;
+}
+
+.activity-button {
+  &:not(:disabled) {
+    background-color: $color-blue-dark !important;
+  }
+
+  .mat-button-wrapper {
+    padding: 0 !important;
+
+    color: #ffffff;
+
+    .mat-icon {
+      width: 32px;
+      height: 32px;
+
+      font-size: 32px;
+    }
+  }
 }
 
 /**
