--- a/ddp-workspace/projects/ddp-rgp/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles/_variables.scss
@@ -5,3 +5,4 @@ $color-orange: #e8702a;
 $color-orange-light: #f9dbca;
 $color-grey-light: #f1f1f1;
 $color-grey-light-2: #efefef;
+$color-grey-light-3: #eeeeee;
