--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
@@ -18,7 +18,7 @@
     <button *ngIf="block.allowMultiple" mat-flat
             class="add-btn button button_primary"
             (click)="createNewCard()">
-        <img lazy-resource src="assets/shared/add-person.svg" class="icon" [alt]="block.addButtonText">
+        <img src="assets/shared/add-person.svg" class="icon" [alt]="block.addButtonText">
         <span class="text">{{block.addButtonText}}</span>
     </button>
 </div>
