Rename to parentActivityInstanceGuid

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
@@ -8,7 +8,7 @@
                                           [readonly]="readonly"
                                           [validationRequested]="validationRequested"
                                           [studyGuid]="studyGuid"
-                                          [activityGuid]="activityGuid"
+                                          [parentActivityInstanceGuid]="parentActivityInstanceGuid"
                                           (deleteActivity)="onDeleteCard($event)">
                 </ddp-modal-activity-block>
             </div>
