Rename methods as to have a consistency

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
@@ -9,7 +9,7 @@
                                           [validationRequested]="validationRequested"
                                           [studyGuid]="studyGuid"
                                           [parentActivityInstanceGuid]="parentActivityInstanceGuid"
-                                          (deleteActivity)="onDeleteCard($event)">
+                                          (deleteActivity)="onDeleteChildInstance($event)">
                 </ddp-modal-activity-block>
             </div>
         </ng-container>
@@ -17,7 +17,7 @@
 
     <button *ngIf="block.allowMultiple" mat-flat
             class="add-btn button button_primary"
-            (click)="createNewCard()">
+            (click)="createChildInstance()">
         <img src="assets/shared/add-person.svg" class="icon" [alt]="block.addButtonText">
         <span class="text">{{block.addButtonText}}</span>
     </button>
