DDP-5593 Use child activity guid

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/modalActivityBlock/modalActivityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/modalActivityBlock/modalActivityBlock.component.html
@@ -48,7 +48,7 @@
     <ddp-activity-section [section]="activityForm?.sections[0]"
                           [readonly]="readonly"
                           [studyGuid]="studyGuid"
-                          [activityGuid]="activityGuid"
+                          [activityGuid]="currentActivityInstance.instanceGuid"
                           [validationRequested]="validationRequested"
     ></ddp-activity-section>
 
