DDP-5593: - update the instance after closing the dialog box - simplify the appearance of the delete dialog box when working on a mobile device

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/modalActivityBlock/modalActivityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/modalActivityBlock/modalActivityBlock.component.html
@@ -55,9 +55,8 @@
       ></ddp-activity-section>
     </ng-template>
 
-    <button mat-flat-button
+    <button mat-flat-button mat-dialog-close
             class="button_primary modal-activity-block__save_activity"
-            (click)="closeEditDialog()"
             [innerHTML]="'SDK.SaveButton' | translate">
     </button>
   </mat-dialog-content>
